force-app/main/default/objects/df_journal_dk__c/fields/picklist_bosat_uden_for_dk__c.field-meta.xml
<CustomField>
    <fullName>picklist_bosat_uden_for_dk__c</fullName>
    <label>Var en af jer bosat uden for Dan 0dd27</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>bosat_uden_for_dk_nej</fullName>
                <label>Nej, vi var begge bosat i Danmark</label>
            </value>
            <value>
                <fullName>bosat_uden_for_dk_p1</fullName>
                <label>{person_1_first_name} var bosat uden for Danmark</label>
            </value>
            <value>
                <fullName>bosat_uden_for_dk_p2</fullName>
                <label>{person_2_first_name} var bosat uden for Danmark</label>
            </value>
            <value>
                <fullName>bosat_uden_for_dk_begge</fullName>
                <label>Vi var begge bosat uden for Danmark</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>