force-app/main/default/objects/df_journal_dk__c/fields/postnummer_primr_vrge_brnetestam_113__c.field-meta.xml
<CustomField>
    <fullName>postnummer_primr_vrge_brnetestam_113__c</fullName>
    <label>Postnummer 944fb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>