force-app/main/default/objects/df_journal_dk__c/fields/postnummer_samejeoverenskomst__c.field-meta.xml
<CustomField>
    <fullName>postnummer_samejeoverenskomst__c</fullName>
    <label>Postnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>