force-app/main/default/objects/df_journal_dk__c/fields/primr_eller_sekundr_primr_vrge__c.field-meta.xml
<CustomField>
    <fullName>primr_eller_sekundr_primr_vrge__c</fullName>
    <label>Primær eller sekundær? (Primær v 1d361</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>prim_prim_vrge</fullName>
                <label>Primær</label>
            </value>
            <value>
                <fullName>sekun_prim_vrge</fullName>
                <label>Sekundær</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>