force-app/main/default/objects/df_journal_dk__c/fields/primr_fuldmgtig_picklist_pp2__c.field-meta.xml
<CustomField>
    <fullName>primr_fuldmgtig_picklist_pp2__c</fullName>
    <label>Primær fuldmægtig (picklist_pp2)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>skal_vre_primr_fuldmgtig_pp2</fullName>
                <label>Skal være primær fuldmægtig</label>
            </value>
            <value>
                <fullName>skal_ikke_vre_primr_fuldmgtig_pp2</fullName>
                <label>Skal ikke være primær fuldmægtig</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>