force-app/main/default/objects/df_journal_dk__c/fields/primr_vrge_cprnummer__c.field-meta.xml
<CustomField>
    <fullName>primr_vrge_cprnummer__c</fullName>
    <description>Primær værge CPR-nummer</description>
    <label>CPR-nummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>