force-app/main/default/objects/df_journal_dk__c/fields/primr_vrge_efternavn__c.field-meta.xml
<CustomField>
    <fullName>primr_vrge_efternavn__c</fullName>
    <description>Primær værge efternavn</description>
    <label>Efternavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>