force-app/main/default/objects/df_journal_dk__c/fields/primr_vrge_fornavn__c.field-meta.xml
<CustomField>
    <fullName>primr_vrge_fornavn__c</fullName>
    <description>Primær værge fornavn</description>
    <label>Fornavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>