force-app/main/default/objects/df_journal_dk__c/fields/primr_vrge_primr_fuldmgtig__c.field-meta.xml
<CustomField>
    <fullName>primr_vrge_primr_fuldmgtig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primær fuldmægtig</label>
    <type>Checkbox</type>
</CustomField>