force-app/main/default/objects/df_journal_dk__c/fields/primr_vrge_prioritet__c.field-meta.xml
<CustomField>
    <fullName>primr_vrge_prioritet__c</fullName>
    <label>Subsidiære fuldmægtiges priorite 8c4b5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>