force-app/main/default/objects/df_journal_dk__c/fields/pris_i_alt_samejeoverenskomst__c.field-meta.xml
<CustomField>
    <fullName>pris_i_alt_samejeoverenskomst__c</fullName>
    <description>Hvis i f.eks. har lagt en kontant udbetaling 600.000 kr. og lavet forbedringer for 400.000 kr. , så er pris i alt 1.000.000. - Altså &quot;kontant udbetaling + eventuelle forbedringer&quot;</description>
    <label>Pris i alt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>