force-app/main/default/objects/df_journal_dk__c/fields/procurator_2_mutual_power_of_att_29__c.field-meta.xml
<CustomField>
    <fullName>procurator_2_mutual_power_of_att_29__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Er det 2 gensidige fuldmagter (Person 1 og person 2)</description>
    <label>Er det 2 gensidige fuldmagter (P 24491</label>
    <type>Checkbox</type>
</CustomField>