force-app/main/default/objects/df_journal_dk__c/fields/procurator_annual_fee__c.field-meta.xml
<CustomField>
    <fullName>procurator_annual_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal fuldmægtige have adgang til et årligthonorar?</description>
    <label>Skal fuldmægtige have adgang til 29f79</label>
    <type>Checkbox</type>
</CustomField>