force-app/main/default/objects/df_journal_dk__c/fields/procurator_annual_fee_amount__c.field-meta.xml
<CustomField>
    <fullName>procurator_annual_fee_amount__c</fullName>
    <description>Årligt honorar beløb</description>
    <label>Årligt honorar beløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>