force-app/main/default/objects/df_journal_dk__c/fields/procurator_company__c.field-meta.xml
<CustomField>
    <fullName>procurator_company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Virksomhed?</description>
    <label>Virksomhed?</label>
    <type>Checkbox</type>
</CustomField>