force-app/main/default/objects/df_journal_dk__c/fields/procurator_economic_conditions__c.field-meta.xml
<CustomField>
    <fullName>procurator_economic_conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Økonomiske forhold</description>
    <label>Økonomiske forhold</label>
    <type>Checkbox</type>
</CustomField>