force-app/main/default/objects/df_journal_dk__c/fields/procurator_insert_other_procurat_27__c.field-meta.xml
<CustomField>
    <fullName>procurator_insert_other_procurat_27__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal der indsættes andre fuldmægte end gensidige?</description>
    <label>Skal der indsættes andre fuldmæg 4b35f</label>
    <type>Checkbox</type>
</CustomField>