force-app/main/default/objects/df_journal_dk__c/fields/procurator_personal_conditions__c.field-meta.xml
<CustomField>
    <fullName>procurator_personal_conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Personlige forhold</description>
    <label>Personlige forhold</label>
    <type>Checkbox</type>
</CustomField>