force-app/main/default/objects/df_journal_dk__c/fields/procurator_presents_for_charity__c.field-meta.xml
<CustomField>
    <fullName>procurator_presents_for_charity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gaver til velgørenhed?</description>
    <label>Gaver til velgørenhed?</label>
    <type>Checkbox</type>
</CustomField>