force-app/main/default/objects/df_journal_dk__c/fields/procurator_presents_occasionally__c.field-meta.xml
<CustomField>
    <fullName>procurator_presents_occasionally__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal der kunne gives gaver lejlighedsvis?</description>
    <label>Skal der kunne gives lejlighedsg b5e7c</label>
    <type>Checkbox</type>
</CustomField>