force-app/main/default/objects/df_journal_dk__c/fields/procurator_presents_tax_free__c.field-meta.xml
<CustomField>
    <fullName>procurator_presents_tax_free__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Afgiftsfrie gaver?</description>
    <label>Afgiftsfrie gaver?</label>
    <type>Checkbox</type>
</CustomField>