force-app/main/default/objects/df_journal_dk__c/fields/procurator_presents_usual__c.field-meta.xml
<CustomField>
    <fullName>procurator_presents_usual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal der kunne gives sædvanlige gaver?</description>
    <label>Skal der kunne gives sædvanlige  f5728</label>
    <type>Checkbox</type>
</CustomField>