force-app/main/default/objects/df_journal_dk__c/fields/procurator_secondary_procurators_28__c.field-meta.xml
<CustomField>
    <fullName>procurator_secondary_procurators_28__c</fullName>
    <description>Skal sekundære fuldmægtige stå i forening i eller prioriteret rækkefølge?</description>
    <label>Skal sekundære fuldmægtige stå i 31099</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>procurator_in_association</fullName>
                <label>Procurator In association</label>
            </value>
            <value>
                <fullName>procurator_priority</fullName>
                <label>Fuldmægtig prioritet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>