force-app/main/default/objects/df_journal_dk__c/fields/produkter_arveforskudskontrakt__c.field-meta.xml
<CustomField>
    <fullName>produkter_arveforskudskontrakt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 895 kr.</description>
    <label>Arveforskudskontrakt</label>
    <type>Checkbox</type>
</CustomField>