force-app/main/default/objects/df_journal_dk__c/fields/produkter_fremtidsfuldmagt_for_v_39__c.field-meta.xml
<CustomField>
    <fullName>produkter_fremtidsfuldmagt_for_v_39__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 1.795 kr.</description>
    <label>Fremtidsfuldmagt for virksomheds 8b540</label>
    <type>Checkbox</type>
</CustomField>