force-app/main/default/objects/df_journal_dk__c/fields/produkter_generalfuldmagt__c.field-meta.xml
<CustomField>
    <fullName>produkter_generalfuldmagt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 1.195 kr.</description>
    <label>Generalfuldmagt</label>
    <type>Checkbox</type>
</CustomField>