force-app/main/default/objects/df_journal_dk__c/fields/produkter_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>produkter_gldsbrev__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 1.495 kr.</description>
    <label>Gældsbrev</label>
    <type>Checkbox</type>
</CustomField>