force-app/main/default/objects/df_journal_dk__c/fields/produkter_indbotestamente__c.field-meta.xml
<CustomField>
    <fullName>produkter_indbotestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 995 kr.</description>
    <label>Indbotestamente</label>
    <type>Checkbox</type>
</CustomField>