force-app/main/default/objects/df_journal_dk__c/fields/produkter_min_sidste_vilje__c.field-meta.xml
<CustomField>
    <fullName>produkter_min_sidste_vilje__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 299 kr.</description>
    <label>Min Sidste Vilje</label>
    <type>Checkbox</type>
</CustomField>