force-app/main/default/objects/df_journal_dk__c/fields/produkter_samejeoverenskomst__c.field-meta.xml
<CustomField>
    <fullName>produkter_samejeoverenskomst__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 4.495 kr.</description>
    <label>Samejeoverenskomst</label>
    <type>Checkbox</type>
</CustomField>