force-app/main/default/objects/df_journal_dk__c/fields/produkter_samtykke_til_uskiftet_40__c.field-meta.xml
<CustomField>
    <fullName>produkter_samtykke_til_uskiftet_40__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 495 kr.</description>
    <label>Samtykke til uskiftet bo f99fd</label>
    <type>Checkbox</type>
</CustomField>