force-app/main/default/objects/df_journal_dk__c/fields/produkter_servicepakke_3__c.field-meta.xml
<CustomField>
    <fullName>produkter_servicepakke_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 1.895 kr.</description>
    <label>Servicepakke 3</label>
    <type>Checkbox</type>
</CustomField>