force-app/main/default/objects/df_journal_dk__c/fields/produkter_servicepakke_mini__c.field-meta.xml
<CustomField>
    <fullName>produkter_servicepakke_mini__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 695 kr.</description>
    <label>Servicepakke Mini</label>
    <type>Checkbox</type>
</CustomField>