force-app/main/default/objects/df_journal_dk__c/fields/produkter_singletestamente__c.field-meta.xml
<CustomField>
    <fullName>produkter_singletestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Original pris: 3.995 kr.</description>
    <label>Singletestamente</label>
    <type>Checkbox</type>
</CustomField>