force-app/main/default/objects/df_journal_dk__c/fields/rligt_honorarbelb_person2__c.field-meta.xml
<CustomField>
    <fullName>rligt_honorarbelb_person2__c</fullName>
    <label>Årligt honorarbeløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>