force-app/main/default/objects/df_journal_dk__c/fields/separate_property_type__c.field-meta.xml
<CustomField>
    <fullName>separate_property_type__c</fullName>
    <description>Særeje type</description>
    <label>Særejeform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>kombinationssæreje</fullName>
                <label>Kombinationssæreje</label>
            </value>
            <value>
                <fullName>fuldstndigt_sreje</fullName>
                <label>Fuldstændigt særeje</label>
            </value>
            <value>
                <fullName>fuldstndigt_sreje_med_succession</fullName>
                <label>Fuldstændigt særeje med succession</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>