force-app/main/default/objects/df_journal_dk__c/fields/service_1__c.field-meta.xml
<CustomField>
    <fullName>service_1__c</fullName>
    <label>Service #1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>service_1_tingl_fremt</fullName>
                <label>Tinglysning af fremtidsfuldmagt</label>
            </value>
            <value>
                <fullName>service_1_beboelsesret</fullName>
                <label>Beboelsesret</label>
            </value>
            <value>
                <fullName>service_1_kodicil</fullName>
                <label>Oprettelse af kodicil</label>
            </value>
            <value>
                <fullName>service_1_forkbsret</fullName>
                <label>Forkøbsret</label>
            </value>
            <value>
                <fullName>service_1_gennemlsning</fullName>
                <label>Gennemlæsning af dokument</label>
            </value>
            <value>
                <fullName>service_1_indbotestamente</fullName>
                <label>Indbotestamente</label>
            </value>
            <value>
                <fullName>service_1_videomde</fullName>
                <label>Videomøde</label>
            </value>
            <value>
                <fullName>service_1_tilbagekaldelse</fullName>
                <label>Tilbagekaldelse af testamente</label>
            </value>
            <value>
                <fullName>service_1_ekstra_t_fuldmagt</fullName>
                <label>Ekstra type fuldmagt</label>
            </value>
            <value>
                <fullName>service_1_eksta_t_testamente</fullName>
                <label>Ekstra type testamente</label>
            </value>
            <value>
                <fullName>service_1_begunstigelseserk</fullName>
                <label>Formulering af begunstigelseserklæring</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>