force-app/main/default/objects/df_journal_dk__c/fields/service_formulering_af_begunstig_76__c.field-meta.xml
<CustomField>
    <fullName>service_formulering_af_begunstig_76__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Originalpris: 0 kr.</description>
    <label>Service: Formulering af begunsti 5831d</label>
    <type>Checkbox</type>
</CustomField>