force-app/main/default/objects/df_journal_dk__c/fields/service_oprettelse_af_kodicil__c.field-meta.xml
<CustomField>
    <fullName>service_oprettelse_af_kodicil__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Originalpris: 0 kr.</description>
    <label>Service: Oprettelse af kodicil</label>
    <type>Checkbox</type>
</CustomField>