force-app/main/default/objects/df_journal_dk__c/fields/service_tilbagekaldelse_af_testa_77__c.field-meta.xml
<CustomField>
    <fullName>service_tilbagekaldelse_af_testa_77__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service: Tilbagekaldelse af test 4ce38</label>
    <type>Checkbox</type>
</CustomField>