force-app/main/default/objects/df_journal_dk__c/fields/service_tinglysning_af_gtepagt__c.field-meta.xml
<CustomField>
    <fullName>service_tinglysning_af_gtepagt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Originalpris: 0 kr.</description>
    <label>Service: Tinglysning af ægtepagt</label>
    <type>Checkbox</type>
</CustomField>