force-app/main/default/objects/df_journal_dk__c/fields/servicepakke_picklist__c.field-meta.xml
<CustomField>
    <fullName>servicepakke_picklist__c</fullName>
    <label>Servicepakke</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>servicepakke_picklist_mini_1</fullName>
                <label>Servicepakke Mini (1 service)</label>
            </value>
            <value>
                <fullName>servicepakke_picklist_lille_2</fullName>
                <label>Servicepakke Lille (2 services)</label>
            </value>
            <value>
                <fullName>servicepakke_picklist_mellem_4</fullName>
                <label>Servicepakke Mellem (4 services)</label>
            </value>
            <value>
                <fullName>servicepakke_picklist_stor_alle</fullName>
                <label>Servicepakke Stor (alle nødvendige services)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>