force-app/main/default/objects/df_journal_dk__c/fields/should_requirements_about_childr_12__c.field-meta.xml
<CustomField>
    <fullName>should_requirements_about_childr_12__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal bestemmelser der omhandler børnene/andre arvinge vedvare?</description>
    <label>Skal bestemmelser der omhandler  2062e</label>
    <type>Checkbox</type>
</CustomField>