force-app/main/default/objects/df_journal_dk__c/fields/should_revoke_or_alteration_requ_17__c.field-meta.xml
<CustomField>
    <fullName>should_revoke_or_alteration_requ_17__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kræver at begge parter er enige om evt. ændringer</description>
    <label>Skal tilbagekaldelse eller ændri fa98e</label>
    <type>Checkbox</type>
</CustomField>