force-app/main/default/objects/df_journal_dk__c/fields/should_testament_fall_on_end_of_8__c.field-meta.xml
<CustomField>
    <fullName>should_testament_fall_on_end_of_8__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skal testamentet bortfalde ved samlivets ophør?</description>
    <label>Skal testamentet bortfalde ved s 75308</label>
    <type>Checkbox</type>
</CustomField>