force-app/main/default/objects/df_journal_dk__c/fields/sidder_du_i_uskiftet_bo__c.field-meta.xml
<CustomField>
    <fullName>sidder_du_i_uskiftet_bo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sidder du i uskiftet bo?</label>
    <type>Checkbox</type>
</CustomField>