force-app/main/default/objects/df_journal_dk__c/fields/skal_arvingen_kunne_ndreophve_sr_193__c.field-meta.xml
<CustomField>
    <fullName>skal_arvingen_kunne_ndreophve_sr_193__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal arvingen kunne ændre/ophæve 159e1</label>
    <type>Checkbox</type>
</CustomField>