force-app/main/default/objects/df_journal_dk__c/fields/skal_begunstiges_primr_vrge__c.field-meta.xml
<CustomField>
    <fullName>skal_begunstiges_primr_vrge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal begunstiges? (Primær værge)</label>
    <type>Checkbox</type>
</CustomField>