force-app/main/default/objects/df_journal_dk__c/fields/skal_belbet_pristalsreguleres__c.field-meta.xml
<CustomField>
    <fullName>skal_belbet_pristalsreguleres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal beløbet pristalsreguleres?</label>
    <type>Checkbox</type>
</CustomField>