force-app/main/default/objects/df_journal_dk__c/fields/skal_dansk_ret_skal_glde_for_gte_94__c.field-meta.xml
<CustomField>
    <fullName>skal_dansk_ret_skal_glde_for_gte_94__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Der skal tilføjes en bestemmelse i ægtepagten, hvis mindst én af jer har haft fast bopæl i udlandet ved ægteskabets indgåelse (turistvisum eller lignende tæller ikke).</description>
    <label>Skal dansk ret skal gælde for æg 25d99</label>
    <type>Checkbox</type>
</CustomField>