force-app/main/default/objects/df_journal_dk__c/fields/skal_der_indsttes_andre_fuldmgti_59__c.field-meta.xml
<CustomField>
    <fullName>skal_der_indsttes_andre_fuldmgti_59__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal der indsættes andre fuldmæg 14748</label>
    <type>Checkbox</type>
</CustomField>