force-app/main/default/objects/df_journal_dk__c/fields/skal_der_indsttes_en_bestemelse_192__c.field-meta.xml
<CustomField>
    <fullName>skal_der_indsttes_en_bestemelse_192__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal der indsættes en bestemelse 4234f</label>
    <type>Checkbox</type>
</CustomField>