force-app/main/default/objects/df_journal_dk__c/fields/skal_der_indsttes_subsidire_fuld_57__c.field-meta.xml
<CustomField>
    <fullName>skal_der_indsttes_subsidire_fuld_57__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal der indsættes subsidiære fu 3f230</label>
    <type>Checkbox</type>
</CustomField>