force-app/main/default/objects/df_journal_dk__c/fields/skal_der_kunne_gives_sdvanlige_g_61__c.field-meta.xml
<CustomField>
    <fullName>skal_der_kunne_gives_sdvanlige_g_61__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal der kunne gives sædvanlige  f5728</label>
    <type>Checkbox</type>
</CustomField>