force-app/main/default/objects/df_journal_dk__c/fields/skal_der_kunnes_lejlighedsgaver_60__c.field-meta.xml
<CustomField>
    <fullName>skal_der_kunnes_lejlighedsgaver_60__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal der kunnes lejlighedsgaver? fd9ae</label>
    <type>Checkbox</type>
</CustomField>