force-app/main/default/objects/df_journal_dk__c/fields/skal_der_tages_hjde_for_konomi_t_74__c.field-meta.xml
<CustomField>
    <fullName>skal_der_tages_hjde_for_konomi_t_74__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal der tages højde for økonomi 91658</label>
    <type>Checkbox</type>
</CustomField>