force-app/main/default/objects/df_journal_dk__c/fields/skal_der_tildeles_beboelses_ret__c.field-meta.xml
<CustomField>
    <fullName>skal_der_tildeles_beboelses_ret__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal der tildeles beboelses ret?</label>
    <type>Checkbox</type>
</CustomField>