force-app/main/default/objects/df_journal_dk__c/fields/skal_fuldmgtige_have_adgang_til_62__c.field-meta.xml
<CustomField>
    <fullName>skal_fuldmgtige_have_adgang_til_62__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal fuldmægtige have adgang til 8b7ba</label>
    <type>Checkbox</type>
</CustomField>