force-app/main/default/objects/df_journal_dk__c/fields/skal_fuldmgtige_st_i_forening_el_58__c.field-meta.xml
<CustomField>
    <fullName>skal_fuldmgtige_st_i_forening_el_58__c</fullName>
    <label>Skal fuldmægtige stå i forening  419f2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>i_forening</fullName>
                <label>I forening</label>
            </value>
            <value>
                <fullName>i_prioriteret_rkkeflge</fullName>
                <label>I prioriteret rækkefølge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>