force-app/main/default/objects/df_journal_dk__c/fields/skal_gld_vre_sreje__c.field-meta.xml
<CustomField>
    <fullName>skal_gld_vre_sreje__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal gæld være særeje?</label>
    <type>Checkbox</type>
</CustomField>