force-app/main/default/objects/df_journal_dk__c/fields/skal_klausulerne_om_bndlggelse_v_44__c.field-meta.xml
<CustomField>
    <fullName>skal_klausulerne_om_bndlggelse_v_44__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal klausulerne om båndlæggelse 6b2f1</label>
    <type>Checkbox</type>
</CustomField>