force-app/main/default/objects/df_journal_dk__c/fields/skal_klausulerne_om_brnetestamen_45__c.field-meta.xml
<CustomField>
    <fullName>skal_klausulerne_om_brnetestamen_45__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal klausulerne om børnetestame 280e9</label>
    <type>Checkbox</type>
</CustomField>