force-app/main/default/objects/df_journal_dk__c/fields/skal_klausulerne_om_sreje_vedvar_48__c.field-meta.xml
<CustomField>
    <fullName>skal_klausulerne_om_sreje_vedvar_48__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal klausulerne om særeje vedva 705bb</label>
    <type>Checkbox</type>
</CustomField>