force-app/main/default/objects/df_journal_dk__c/fields/skal_sekundre_fuldmgtige_st_i_fo_63__c.field-meta.xml
<CustomField>
    <fullName>skal_sekundre_fuldmgtige_st_i_fo_63__c</fullName>
    <label>Skal sekundære fuldmægtige stå i a4fdb</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>i_forening_person_2</fullName>
                <label>I forening</label>
            </value>
            <value>
                <fullName>i_prioriteret_rkkeflge_person_2</fullName>
                <label>I prioriteret rækkefølge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>