force-app/main/default/objects/df_journal_dk__c/fields/skal_sreje_omf_indtgter_og_surro__c.field-meta.xml
<CustomField>
    <fullName>skal_sreje_omf_indtgter_og_surro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal særejet omfatte indtægter o f9bca</label>
    <type>Checkbox</type>
</CustomField>