force-app/main/default/objects/df_journal_dk__c/fields/skal_vre_fuldmgtig_person2__c.field-meta.xml
<CustomField>
    <fullName>skal_vre_fuldmgtig_person2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal være fuldmægtig</label>
    <type>Checkbox</type>
</CustomField>