force-app/main/default/objects/df_journal_dk__c/fields/skal_vrgen_have_et_mnedligt_belb_75__c.field-meta.xml
<CustomField>
    <fullName>skal_vrgen_have_et_mnedligt_belb_75__c</fullName>
    <label>Skal værgen have et månedligt be d8753</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>mnedligt_belb</fullName>
                <label>Månedligt beløb</label>
            </value>
            <value>
                <fullName>engangsbelb</fullName>
                <label>Engangsbeløb</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>